go back to oregon

--- a/leaderboard_1.0/experiments/exp1.yaml
+++ b/leaderboard_1.0/experiments/exp1.yaml
@@ -10,26 +10,26 @@ spec:
         node.kubernetes.io/instance-type: g5.4xlarge
       initContainers:
         - name: leaderboard-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-testing
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/leaderboard-testing
           command: [ "sh", "-c", "cp -r /workspace/leaderboard/* /tmp/leaderboard-master/"]
           volumeMounts:
             - mountPath: /tmp/leaderboard-master
               name: leaderboard-master
         - name: scenario-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-testing
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/leaderboard-testing
           command: [ "sh", "-c", "cp -r /workspace/scenario_runner/* /tmp/scenario-runner-master/"]
           volumeMounts:
             - mountPath: /tmp/scenario-runner-master
               name: scenario-runner-master
         - name: carla-root-copy
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-testing
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/leaderboard-testing
           command: [ "sh", "-c", "cp -r /workspace/CARLA/* /tmp/carla-root-master/"]
           volumeMounts:
             - mountPath: /tmp/carla-root-master
               name: carla-root-master
       containers:
         - name: simulator
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/challenge-simulator:latest
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/challenge-simulator:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -50,7 +50,7 @@ spec:
             limits:
               nvidia.com/gpu: 1
         - name: agent
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/bm-72e0bac2-team-177:19f6c555-b404-4d3f-b1f2-1b61be797aa7
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/bm-72e0bac2-team-177:19f6c555-b404-4d3f-b1f2-1b61be797aa7
           command: ["/bin/bash", "-c"]
           args:
             - |
