--- a/leaderboard_2.0/tests/test-carla-server.yaml
+++ b/leaderboard_2.0/tests/test-carla-server.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: submission-worker
       containers:
         - name: simulator
-          image: 342236305043.dkr.ecr.us-east-1.amazonaws.com/leaderboard-20-simulator:latest
+          image: 342236305043.dkr.ecr.us-west-2.amazonaws.com/leaderboard-20-simulator:latest
           command: ["/bin/bash", "-c"]
           args:
             - |
