--- a/leaderboard_1.0/config/fluentd.yaml
+++ b/leaderboard_1.0/config/fluentd.yaml
@@ -101,7 +101,7 @@ spec:
           - name: K8S_NODE_NAME
             value: leaderboard-10
           - name: AWS_REGION
-            value: us-east-1
+            value: us-west-2
           - name: LOG_GROUP_NAME
             value: leaderboard-10
         resources:
