--- a/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
+++ b/leaderboard_2.0/jobs/param-carla-benchmark-job.yaml
@@ -23,6 +23,7 @@ spec:
               if [ -z $RESUME ]; then
                 echo "Detected a normal run, creating log files"
                 mkdir -m 0777 -p /tmp/logs/agent/agent{1..4}
+                mkdir -m 0777 -p /tmp/logs/recorder
                 mkdir -m 0777 -p /tmp/logs/simulator
                 mkdir -m 0777 -p /tmp/logs/logcopy
                 mkdir -m 0777 -p /tmp/logs/containers-status
@@ -70,10 +71,13 @@ spec:
               name: x11
             - mountPath: /home/carla/CarlaUE4/Saved
               name: logs
-              subPath: simulator
+              subPath: recorder
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
+            - mountPath: /tmp/simulator
+              name: logs
+              subPath: simulator
           securityContext:
             privileged: true
           resources:
@@ -135,10 +139,13 @@ spec:
               name: x11
             - mountPath: /home/carla/CarlaUE4/Saved
               name: logs
-              subPath: simulator
+              subPath: recorder
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
+            - mountPath: /tmp/simulator
+              name: logs
+              subPath: simulator
           securityContext:
             privileged: true
           resources:
@@ -200,10 +207,13 @@ spec:
               name: x11
             - mountPath: /home/carla/CarlaUE4/Saved
               name: logs
-              subPath: simulator
+              subPath: recorder
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
+            - mountPath: /tmp/simulator
+              name: logs
+              subPath: simulator
           securityContext:
             privileged: true
           resources:
@@ -265,10 +275,13 @@ spec:
               name: x11
             - mountPath: /home/carla/CarlaUE4/Saved
               name: logs
-              subPath: simulator
+              subPath: recorder
             - mountPath: /tmp/status
               name: logs
               subPath: containers-status
+            - mountPath: /tmp/simulator
+              name: logs
+              subPath: simulator
           securityContext:
             privileged: true
           resources:
