implemented base parallelization strategy

--- a/leaderboard_1.0/docker/leaderboard/Dockerfile
+++ b/leaderboard_1.0/docker/leaderboard/Dockerfile
@@ -15,9 +15,11 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 ENV CARLA_PYTHON_API_ROOT "/workspace/CARLA"
 ENV SCENARIO_RUNNER_ROOT "/workspace/scenario_runner"
 ENV LEADERBOARD_ROOT "/workspace/leaderboard"
+ENV GPU_UTILS_ROOT "/workspace/gpu_utils"
 
 COPY PythonAPI ${CARLA_PYTHON_API_ROOT}/PythonAPI
 COPY scenario_runner ${SCENARIO_RUNNER_ROOT}
 COPY leaderboard ${LEADERBOARD_ROOT}
+COPY gpu_utils ${GPU_UTILS_ROOT}
 
 CMD ["/bin/bash"]
