--- a/leaderboard_2.0/tests/test-gpu-job.yaml
+++ b/leaderboard_2.0/tests/test-gpu-job.yaml
@@ -3,6 +3,9 @@ kind: Pod
 metadata:
   name: gpu-pod
 spec:
+  nodeSelector:
+    node.kubernetes.io/instance-type: g5.12xlarge
+
   restartPolicy: Never
   containers:
     - name: cuda-container
