--- a/leaderboard_1.0/jobs/submission.yaml
+++ b/leaderboard_1.0/jobs/submission.yaml
@@ -1,18 +1,18 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name.$: $.submission.name
+  name.$: $.data.submission.name
 spec:
   backoffLimit: 2
   template:
     spec:
       serviceAccountName: submission-worker
       nodeSelector:
-        node.kubernetes.io/instance-type: g5.12xlarge
+        node.kubernetes.io/instance-type: $.data.cluster.instance_type
 
       initContainers:
         - name: private-contents
-          image.$: $.cluster.leaderboard_image
+          image.$: $.data.cluster.leaderboard_image
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -38,11 +38,11 @@ spec:
               bash /tmp/gpu_utils/get_gpu_uuid.sh > /tmp/gpu_utils/gpu.txt
           env:
             - name: SUBMISSION_ID
-              value.$: $.submission.submission_id
+              value.$: $.data.submission.submission_id
             - name: RESUME
-              value.$: $.submission.resume
+              value.$: $.data.submission.resume
             - name: S3_BUCKET
-              value.$: "$.aws.s3_bucket"
+              value.$: "$.data.aws.s3_bucket"
           volumeMounts:
             - mountPath: /tmp/leaderboard
               name: leaderboard
@@ -61,7 +61,7 @@ spec:
       containers:
         
         - name: simulator
-          image.$: $.cluster.simulator_image
+          image.$: $.data.cluster.simulator_image
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -69,7 +69,7 @@ spec:
               bash /home/carla/run_carla.sh
           env:
             - name: WORKER_ID
-              value.$: $.parallelization.worker_id
+              value.$: $.data.parallelization.worker_id
           volumeMounts:
             - mountPath: /gpu
               name: gpu-utils
@@ -81,7 +81,7 @@ spec:
               subPath: containers-status
 
         - name: agent
-          image.$: $.submission.submitted_image_uri
+          image.$: $.data.submission.submitted_image_uri
           command: ["/bin/bash", "-c"]
           args:
             - |
@@ -89,19 +89,15 @@ spec:
               bash /workspace/leaderboard/run_leaderboard.sh
           env:
             - name: WORKER_ID
-              value.$: $.parallelization.worker_id
+              value.$: $.data.parallelization.worker_id
             - name: CHALLENGE_TRACK_CODENAME
-              value.$: $.submission.track_codename
+              value.$: $.data.submission.track_codename
             - name: ROUTES_SUBSET
-              value.$: $.submission.subset
-            - name: ROUTES
-              value: "/workspace/leaderboard/data/routes_testing.xml"
-            - name: SCENARIOS
-              value: "/workspace/leaderboard/data/all_towns_traffic_scenarios_private.json"
+              value.$: $.data.submission.subset
             - name: REPETITIONS
               value: "5"
             - name: RESUME
-              value.$: $.submission.resume
+              value.$: $.data.submission.resume
           volumeMounts:
             - mountPath: /workspace/leaderboard
               name: leaderboard
@@ -119,18 +115,18 @@ spec:
               subPath: containers-status
 
         - name: aws-uploader
-          image.$: $.cluster.uploader_image
+          image.$: $.data.cluster.uploader_image
           command: ["/bin/bash", "-c"]
           args:
             - |
               bash /workspace/run_uploader.sh
           env:
             - name: WORKER_ID
-              value.$: $.parallelization.worker_id
+              value.$: $.data.parallelization.worker_id
             - name: SUBMISSION_ID
-              value.$: $.submission.submission_id
+              value.$: $.data.submission.submission_id
             - name: S3_BUCKET
-              value.$: "$.aws.s3_bucket"
+              value.$: "$.data.aws.s3_bucket"
           volumeMounts:
             - mountPath: /logs
               name: logs
